[package]
name = "hexzen"
description = "a simple, blazingly fast hex editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
clap = { version = "4.4", features = ["derive"] }
bytesize = "1.3"
hex = "0.4"
memchr = "2.6"
unicode-width = "0.2.0"
